2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-marshal.list: Remove.

	* gnome-marshal-main.c: Remove.

	* Makefile.am: Remove references to gnome-marshal.

	* libgnome.h: Don't include gnome-marshal.h

2001-12-11  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add deps info for the built files.

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* libgnome.schemas: Add a couple of settings for wm-properties
	and gnome-wm to share.

2001-12-07  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-program.h: Removed buggy buggy BUGGY
	program_invocation_name public variable. If you've used it in your
	code, use g_get_prgname from Glib instead.

2001-12-04  Richard Hestilow  <hestilow@ximian.com>

	* gnome-exec.c (gnome_prepend_terminal_to_vector): Don't
	double-free terminal.
	
	* gnome-url.c (gnome_url_show): Wrap execution in "/bin/sh -c ...".
	Also, return ret, not hard-coded TRUE.

	* libgnome.schemas: Revamp to better fit
	default-applications-properties. Also, remove UI settings, will
	be moved to libgnomeui.schemas.
	
2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-init.[ch], gnome-util.h, parse-path.cP: replace
	  references to .gnome and .gnome_private with GNOME_DOT_GNOME
	  and GNOME_DOT_GNOME_PRIVATE respectivly. Define these macros
	  in gnome-init.h (to be .gnome2 and .gnome2_private for now)
	  and include this in gnome-util.h, which was the only place
	  that didn't have it.

	* gnome-program.h: A documentation fix I had lying around in my
	  tree for some reason.

Fri Nov 30 16:59:01 2001  George Lebl <jirka@5z.com>

	* gnome-init.c: g_object_set is a vararg function so null terminate
	  the argument list.  Yay for no typesafety and corrupted stacks.

Tue Nov 27 15:41:43 2001  George Lebl <jirka@5z.com>

	* gnome-util.[ch], gnome-exec.c, gnome-url.c: move
	  gnome_is_program_in_path to deprecated and make it a macro
	  that just resolves to g_find_program_in_path which is
	  smarter and all that good stuff.
