@@ -71,16 +71,6 @@ libgnomeinclude_HEADERS = \
 	libgnometypebuiltins.h	\
 	$(libgnome_headers)
 
-#
-# The GConf schema data installation voodoo
-#
-schemadir   = $(sysconfdir)/gconf/schemas
-schema_DATA = libgnome.schemas
-
-install-data-local:
-	GCONF_CONFIG_SOURCE=$(GCONF_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
-
-
 # all autogenerated files need to be generated in the srcdir,
 # so old versions get remade and are not confused with newer
 # versions in the build dir. thus a development setup requires
@@ -136,8 +126,7 @@ $(srcdir)/libgnometypebuiltins.h: @REBUILD@ Makefile.am $(libgnome_headers)
 
 EXTRA_DIST = \
 	libgnome-2.0.pc.in		\
-	parse-path.cP			\
-	$(schema_DATA)
+	parse-path.cP
 
 BUILT_SOURCES = \
 	libgnometypebuiltins.h		\
