@@ -1,3 +1,9 @@
+2001-12-14  Josh Barrow  <drleary@mac.com>
+
+	* Makefile.am:
+	Remove all talk of gconf and schemas and whatnot.
+	libgnome.schemas no longer lives here.
+
 2001-12-11  Anders Carlsson  <andersca@gnu.org>
 
 	* gnome-marshal.list: Remove.
